projects/kubernetes/nkp-hpoc-2/deployment-spring-cloud-petclinic-service-local-empty-vol-pgdb.yaml
---
apiVersion: v1
kind: List
items:
  - apiVersion: apps/v1
    kind: Deployment
    metadata:
      name: spring-cloud-petclinic-service-deployment
      labels:
        app: spring-cloud-petclinic-service    
    spec:
      replicas: 1
      selector:
        matchLabels:
          app: spring-cloud-petclinic-service
      template:
        metadata:
          labels:
            app: spring-cloud-petclinic-service
        spec:
          serviceAccount: spring-cloud-petclinic-service
          securityContext:
              runAsUser: 1002
              runAsGroup: 1000
              fsGroup: 1000  # Ensure this matches runAsGroup              
         
          # initContainers:
          # - name: take-data-dir-ownership
          #   image: alpine:3
          # #   # Give 'cnb:1000' user (id cnb is 1002) 1000 is eric permissions a mounted volume      
          #   command:
          #   - chown
          #   - -R
          #   - 1002:1000
          #   - /data
          #   command:
          #   - ls
          #   - -latr
          #   - /data
          #   volumeMounts:
          #   - name: data-dir
          #     mountPath: /data

          containers:
          - name: spring-cloud-petclinic-service
            image: docker.io/ericm24/spring-cloud-petclinic-service:3.0.4-SNAPSHOT
            # Not sure why this quit working.
            #image: ericm24/spring-cloud-petclinic-service:3.0.0.0-RELEASE
            imagePullPolicy: IfNotPresent
            env:
              - name: SPRING_PROFILES_ACTIVE
                value: "postgres"
              - name: POSTGRES_IP
                value: '192.168.3.191'
              - name: POSTGRES_USER
                value: 'dbuser'
              - name: POSTGRES_PASS
                value: 'petclinic'                
              - name: KUBE_NODE_NAME
                valueFrom:
                  fieldRef:
                    fieldPath: spec.nodeName
              - name: LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_CLOUD
                value: INFO
              - name: LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_BEANS
                value: INFO
              - name: LOGGING_LEVEL_COM_ZAXXER_HIKARI
                value: DEBUG              
              - name: LOGGING_LEVEL_COM_ERIC                
                value: DEBUG
              - name: SPRING_CONFIG_IMPORT
                value: "optional:file:/workspace/configs/timeout-settings.properties,optional:file:/workspace/configs/game-settings.properties,optional:file:/workspace/configs/ui-settings.properties,optional:file:/workspace/secrets/userid2-settings.properties,optional:file:/workspace/secrets/password2-settings.properties"
              - name: SCK_FILE_USERID
                value: '/dsg-platform/secrets/TEST_ERIC_TEST_USERID1'
              - name: SCK_FILE_PASSWORD
                value: '/dsg-platform/secrets/TEST_ERIC_TEST_PASSWORD1'
              - name: SCK_EVAR_USERID
                value: 'MY_SECRET_EVAR_USERID22'
              - name: SCK_EVAR_PASSWORD
                value: 'MY_SECRET_EVAR_PASSWORD22'
              - name: MY_SECRET_USERID1
                value: 'TheSuperSecretUserID33'
              - name: MY_SECRET_PASSWORD1
                value: 'TheSuperSecretPassWord33'
            ports:           
            - containerPort: 8080
              name: http
              protocol: TCP

#            readinessProbe:
#              httpGet:
#                port: 8080
#                path: /actuator/health/readiness
#            livenessProbe:
#              httpGet:
#                port: 8080
#                path: /actuator/health/liveness
 
            volumeMounts:
            - name: empty-log-volume
              mountPath: "/workspace/logs"
            - name: empty-config-volume
              mountPath: "/workspace/configs"
            - name: empty-secret-volume
              mountPath: "/workspace/secrets"
            - name: empty-secret-volume2
              mountPath: "/workspace/secrets2"

          volumes:
          - name: empty-log-volume
            emptyDir: {}      
          - name: empty-config-volume
            emptyDir: {}      
          - name: empty-secret-volume
            emptyDir: {}      
          - name: empty-secret-volume2
            emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: spring-cloud-petclinic-service
  annotations:
        prometheus.io/scrape: 'true'
  labels:
    name: spring-cloud-petclinic-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: debug
      port: 5005
      targetPort: 5005
      protocol: TCP
  selector:
    name: spring-cloud-petclinic-service
