projects/kubernetes/nkp-hpoc-2/spring-cloud-petclinic-service.yaml
---
# Environment: Ultimate HPOC-2-NKP for NKP->EKS & NKP->EC2.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-petclinic-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: spring-cloud-petclinic-service
  template:
    metadata:
      labels:
        name: spring-cloud-petclinic-service
    spec:
      securityContext:
        fsGroup: 1000

      containers:
      - name: spring-cloud-petclinic-service
        image: ghcr.io/ericm48/spring-cloud-petclinic-service:2.8.6-RELEASE
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 300m
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort: 8080
        securityContext:
          #runAsNonRoot: true
          runAsUser: 1000
          capabilities:
            drop:
              - all
          #readOnlyRootFilesystem: true

        # livenessProbe:
        #   httpGet:
        #     path: /actuator/health/liveness
        #     port: 8080
        #   initialDelaySeconds: 300
        #   periodSeconds: 3
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health/readiness
        #     port: 8080
        #   initialDelaySeconds: 30
        #   periodSeconds: 3

          volumeMounts:
          - name: empty-log-volume
            mountPath: "/workspace/logs"
          - name: empty-config-volume
            mountPath: "/workspace/configs"
          - name: empty-secret-volume
            mountPath: "/workspace/secrets"
          - name: empty-secret-volume2
            mountPath: "/workspace/secrets2"

      volumes:
      - name: empty-log-volume
        emptyDir: {}      
      - name: empty-config-volume
        emptyDir: {}      
      - name: empty-secret-volume
        emptyDir: {}      
      - name: empty-secret-volume2
        emptyDir: {}

      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: spring-cloud-petclinic-service
  annotations:
        prometheus.io/scrape: 'true'
  labels:
    name: spring-cloud-petclinic-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    name: spring-cloud-petclinic-service
