projects/kubernetes/nkp-hpoc-2/network-allow-egress-postgress-open.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-egress-no-selector
spec:
  # Appliess the policy to ALL pods in this namespace
  podSelector: {} 
  policyTypes:
  - Egress
  egress:
  # Allows outbound traffic to Postgres
  - ports:
    - protocol: TCP
      port: 5432
